# Tracked-Error-Propagation-Datatype-Demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: CONDITION_NUMBERS.md  PLAN-v0.3.md  PLAN-v0.4.md  PLAN-v1.1.md  PLAN.md  PROVENANCE.md
examples/complex_log_micro/: CHARACTERIZER_NOTES.md  CMakeLists.txt  PLAN.md  README.md  build_kokkos_serial.sh  complex_log_micro.cpp
include/tracked/: complex.hpp  journal.hpp  ops.hpp  tracked.hpp
tests/tracked/: test_basic_ops.cpp  test_cancellation.cpp  test_complex_basic.cpp  test_complex_div.cpp  test_complex_log.cpp  test_complex_sqrt.cpp  test_kahan_vs_naive.cpp  test_literals.cpp  test_log_sum_exp.cpp  test_naive_variance.cpp  test_operand_ids.cpp  test_provenance_v03.cpp  test_trig.cpp
